fixing paragraph media-reference spacing issues - adjust citation and address spacing after that - RMNRW-138

--- a/docroot/themes/nrw/nrw_base_theme/source/sass/modules/media_address/_media.scss
+++ b/docroot/themes/nrw/nrw_base_theme/source/sass/modules/media_address/_media.scss
@@ -5,6 +5,7 @@
     font-size: $font-size-h3;
     line-height: $line-height-base;
     margin-bottom: $padding-base-vertical;
+    margin-top: $padding-base-vertical*2;
   }
   &__fax,
   &__phone {
