--- a/docroot/themes/nrw/nrw_base_theme/source/sass/modules/media_citation/_media.scss
+++ b/docroot/themes/nrw/nrw_base_theme/source/sass/modules/media_citation/_media.scss
@@ -40,10 +40,6 @@
     text-align: center;
   }
   .image {
-    //HACK, to be removed:
-    margin-top: 0px !important;
-    margin-bottom: 0px !important;
-    //HACK END
     margin-left: 0;
     margin-right: 0;
     &__info {
