--- a/docroot/themes/nrw/nrw_base_theme/source/sass/modules/paragraph_media_reference/_paragraph.scss
+++ b/docroot/themes/nrw/nrw_base_theme/source/sass/modules/paragraph_media_reference/_paragraph.scss
@@ -1,12 +1,13 @@
 .media-reference {
   .paragraph__content  {
-    .image,
-    .citation,
-    .media-contact,
-    .video,
-    .video-upload {
-      margin-top: $vertical-gutter-width/-2;
-      margin-bottom: $vertical-gutter-width/-2;
+    padding-top: 0;
+    padding-bottom: 0;
+    article.address,
+    .document,
+    .media-tweet,
+    .media-instagram {
+      padding-top: $vertical-gutter-width/2;
+      padding-bottom: $vertical-gutter-width/2;
     }
   }
 }
